--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,38 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Prata&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <header class="header">
+      <ul class="header__title-section">
+        <li><%= link_to 'Kauzoh', root_path, class:"header__title" %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to current_user.nickname, '#', class:"header__user-name" %></li>
+        <% end %>
+      </ul>
+      <ul class="header__nav-section">
+        <% if user_signed_in? %>
+          <li><%= link_to 'グループを作成', '#', class:"header__link"%></li> 
+          <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class:"header__link" %></li>
+        <% else %>
+          <li><%= link_to 'ログイン', new_user_session_path, class:"header__link" %></li>
+          <li><%= link_to '新規登録', new_user_registration_path, class:"header__link" %></li>
+        <% end %>
+      </ul>
+    </header>
+
     <%= yield %>
+
+    <footer>
+      <div class="footer">
+        ©️ 2023 kauzo
+      </div>
+    </footer>
   </body>
 </html>
