--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       </ul>
       <ul class="header__nav-section">
         <% if user_signed_in? %>
-          <li><%= link_to 'グループを作成', '#', class:"header__link"%></li> 
+          <li><%= link_to 'グループを作成', search_users_path, class:"header__link"%></li> 
           <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class:"header__link" %></li>
         <% else %>
           <li><%= link_to 'ログイン', new_user_session_path, class:"header__link" %></li>
