--- a/app/views/users/search_results.html.erb
+++ b/app/views/users/search_results.html.erb
@@ -2,7 +2,7 @@
   <div class="main__section">
 
     <div class="search-results__section">  
-      <%= form_with model: @user, url: "", method: :get, class: "search-results", local: true do |f| %>
+      <%= form_with model: @user, url: add_members_groups_path, method: :get, class: "search-results", local: true do |f| %>
 
         <% if @users.present? %>
           <div class="select-user">
