一覧表示機能の実装

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -37,5 +37,5 @@
     <%= link_to 'ユーザー検索に戻る', search_users_path, class:"return-link"  %>
     
   </div>
-  <%# <%= render partial: 'list' %> %>
+  <%= render partial: 'list' %>
 </div>
