--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -13,7 +13,7 @@
       </div>
       <ul class="group__item">
         <li><%= link_to '在庫を見る', "#", class:"check-item" %></li>
-        <li><%= link_to '在庫を編集する', "#", class:"add-item" %></li>
+        <li><%= link_to '在庫を編集する', new_group_item_path(@group.id), class:"add-item" %></li>
       </ul>
       <ul class="group__order">
         <li><%= link_to 'お買い物リストを見る', "#", class:"check-order" %></li>
