--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,6 +18,6 @@
     <%# <%= image_tag 'noimage.jpg', :size => '300x200' %> %>
   <%# <% end %> %>
   </div>
-  <%# <%= link_to '編集', edit_group_item_path(id: item.id) %> %>
+  <%= link_to '編集', edit_group_item_path(id: item.id) %>
   <%# <%= link_to '削除', group_item_path(id: item.id), data:{turbo_method: :delete} %> %>
 <% end %>
