--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,5 +19,5 @@
   <%# <% end %> %>
   </div>
   <%= link_to '編集', edit_group_item_path(id: item.id) %>
-  <%# <%= link_to '削除', group_item_path(id: item.id), data:{turbo_method: :delete} %> %>
+  <%= link_to '削除', group_item_path(id: item.id), data:{turbo_method: :delete} %>
 <% end %>
