在庫一覧と新規作成に相互リンクを設置

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,6 +11,7 @@
       <li>メモ：<%= item.memo %></li>
       <% end %>
   </ul>
+  <%= link_to '続けて投稿する', new_group_item_path(item.group.id) %>
   <%= link_to '編集', edit_group_item_path(id: item.id) %>
   <%= link_to '削除', group_item_path(id: item.id), data:{turbo_method: :delete} %>
 <% end %>
