--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,8 +16,8 @@
         <li><%= link_to '在庫リストを作成', new_group_item_path(@group.id), class:"add-item" %></li>
       </ul>
       <ul class="group__order">
-        <li><%= link_to 'お買い物リストを見る', "#", class:"check-order" %></li>
-        <li><%= link_to 'お買い物リストを作成', "#", class:"create-order" %></li>
+        <li><%= link_to 'お買い物リストを見る', group_orders_path(@group.id), class:"check-order" %></li>
+        <li><%= link_to 'お買い物リストを作成', new_group_order_path(@group.id), class:"create-order" %></li>
       </ul>
       <ul class="group__edit">
         <li><%= link_to 'グループを編集する', "#", class:"edit-group" %></li>
