--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,12 +12,18 @@
         <% end %>
       </div>
       <ul class="group__item">
-        <li><%= link_to '在庫を見る', group_items_path(@group.id), class:"check-item" %></li>
-        <li><%= link_to '在庫リストを作成', new_group_item_path(@group.id), class:"add-item" %></li>
+        <% if @group.items.present? %>
+          <li><%= link_to '在庫を見る・編集する', group_items_path(@group.id), class:"check-item" %></li>
+        <% else %>
+          <li><%= link_to 'New! 在庫管理をはじめる', new_group_item_path(@group.id), class:"add-item" %></li>
+        <% end %>
       </ul>
       <ul class="group__order">
-        <li><%= link_to 'お買い物リストを見る', group_orders_path(@group.id), class:"check-order" %></li>
-        <li><%= link_to 'お買い物リストを作成', new_group_order_path(@group.id), class:"create-order" %></li>
+        <% if @group.orders.present? %>
+          <li><%= link_to 'お買い物リストを見る・編集する', group_orders_path(@group.id), class:"check-order" %></li>
+        <% else %>
+          <li><%= link_to 'New! お買い物リストを作る', new_group_order_path(@group.id), class:"create-order" %></li>
+        <% end %>
       </ul>
       <ul class="group__edit">
         <li><%= link_to 'グループを編集する', "#", class:"edit-group" %></li>
