--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,11 +1,15 @@
-在庫リストを編集する
+お買い物リストを編集する
 
 <div class="items-form">
-<%= form_with model: @item, url: group_item_path(@item.group.id), local: true do |f| %>
+<%= form_with model: @order, url: group_order_path(id: @order.id), local: true do |f| %>
   <div>
   <%= f.label 'カテゴリーを選択'%>
   </div>
   <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
+  <div>
+  <%= f.label '優先度を選択'%>
+  </div>
+  <%= f.collection_select(:priority_id, Priority.all, :id, :name, {}, {class:"priority-select"}) %>
   <div>
   <%= f.label 'メモを編集'%>
   </div>
@@ -15,7 +19,7 @@
   </div>
   <%= f.file_field :image %>
   <div>
-  <%= f.submit "在庫リストを修正する" ,class:"add-items-btn" %>
+  <%= f.submit "お買い物リストを修正する" ,class:"edit-orders-btn" %>
   </div>
 <% end %>
 </div>
