--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -17,5 +17,5 @@
       <%# <% end %>
   </ul>
   <%= link_to '編集', edit_group_order_path(id: order.id) %>
-  <%# <%= link_to '削除', group_item_path(id: item.id), data:{turbo_method: :delete} %>
+  <%= link_to '削除', group_order_path(id: order.id), data:{turbo_method: :delete} %>
 <% end %>
