--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -3,19 +3,20 @@
 <div class="items-form">
 <%= form_with model: @item, url: group_item_path(@item.group.id), local: true do |f| %>
   <div>
-  <%= f.label 'カテゴリーを選択'%>
+  <%= f.label 'カテゴリーを選ぶ'%>
   </div>
   <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
   <div>
-  <%= f.label 'メモを編集'%>
+  <%= f.label 'メモ（任意）'%>
   </div>
   <%= f.text_field :memo, class:"memo", placeholder:"(例)賞味期限は12/31" %>
   <div>
-  <%= f.label '画像を変更（変更しなければ、元の画像が表示されます）'%>
+  <%= f.label '画像を選ぶ（任意）'%>
   </div>
   <%= f.file_field :image %>
   <div>
-  <%= f.submit "在庫リストを修正する" ,class:"add-items-btn" %>
+  <%= f.submit "修正" ,class:"add-items-btn" %>
+  <%= link_to '戻る',  group_item_path(id: @item.id) %>
   </div>
 <% end %>
 </div>
