--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,27 +1,26 @@
-在庫リストを作成する
+在庫を登録する
 
 <div class="items-form">
 <%= form_with model: @item, url: group_items_path(@group.id), local: true do |f| %>
   
   <div>
-  <%= f.label 'カテゴリーを選択してください'%>
+  <%= f.label 'カテゴリを選ぶ（必須）'%>
   <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
   </div>
   
   <div>
-  <%= f.label 'メモを保存できます'%>
+  <%= f.label 'メモ（任意）'%>
   <%= f.text_field :memo, class:"memo", placeholder:"(例)賞味期限は12/31" %>
   </div>
 
   <div>
-  <%= f.label '画像を添付してください'%>
+  <%= f.label '画像を選ぶ（任意）'%>
   <%= f.file_field :image %>
   </div>
 
   <div>
-  <%= f.submit "在庫リストに追加する", class:"add-items-btn" %>
+  <%= f.submit '登録', class:"add-items-btn" %>
   </div>
   
 <% end %>
 </div>
-<%= link_to '在庫を見る', group_items_path(@group.id) %>
