--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,7 +1,7 @@
-お買い物リストを編集する
+お買い物リストを修正
 
 <div class="items-form">
-<%= form_with model: @order, url: group_order_path(id: @order.id), local: true do |f| %>
+<%= form_with model: [@item, @order], url: group_order_path(id: @order.id), local: true do |f| %>
   <div>
   <%= f.label 'カテゴリーを選択'%>
   </div>
@@ -19,7 +19,8 @@
   </div>
   <%= f.file_field :image %>
   <div>
-  <%= f.submit "お買い物リストを修正する" ,class:"edit-orders-btn" %>
+  <%= f.submit "修正" ,class:"edit-orders-btn" %>
+  <%= link_to '戻る', group_orders_path(@item.group.id) %>
   </div>
 <% end %>
 </div>
