--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,26 @@
 買い物リスト作成
 <%= form_with model: @order, url: group_orders_path(@group.id), local: true do |f| %>
-  <%= f.text_field :memo, placeholder: "メモ" %>
-  <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
+
+  <% if @item.image.attached? %>
+    <%= @item.category.name %>
+    <%= image_tag @item.image.variant(resize: '300x200'), class: 'item-images' %>
+  <% else %>
+    <%= @item.category.name %>
+  <% end %>
+
+  <div>
+  <%= f.label '優先度（必須）'%>
   <%= f.collection_select(:priority_id, Priority.all, :id, :name, {}, {class:"priority-select"}) %>
-  <%= f.submit "買い物リスト作成" %>
+  </div>
+
+  <div>
+  <%= f.label 'メモ（任意）'%>
+  <%= f.text_field :memo, class:"memo", placeholder:"(例)お母さん用" %>
+  </div>
+
+  <input name="order[item_id]" value=<%= @item.id %> type=hidden>
+
+  <%= f.submit "買い物リストに登録" %>
+
+  <%= link_to '戻る',  group_items_path(@group.id) %>
 <% end %>
