--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -9,7 +9,7 @@
   </div>
   
   <div>
-  <%= f.label 'メモ（任意）'%>
+  <%= f.label '在庫メモ（任意）'%>
   <%= f.text_field :memo, class:"memo", placeholder:"(例)賞味期限は12/31" %>
   </div>
 
