--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,9 +10,9 @@
     </div>
     <ul><% if item.image.attached? %>
         <li><%= image_tag item.image.variant(resize: '300x200'), class: 'item-images' %></li>
-        <li>メモ：<%= item.memo %></li>
+        <li>在庫メモ：<%= item.memo %></li>
         <% else %>
-        <li>メモ：<%= item.memo %></li>
+        <li>在庫メモ：<%= item.memo %></li>
         <% end %>
     </ul>
     <%= link_to '編集・削除画面へ', group_item_path(id: item.id) %>
