--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,21 +11,13 @@
           <%= user.nickname %>
         <% end %>
       </div>
-      <p>＜在庫管理＞</p><br>
       <ul class="group__item">
-        <li><%= link_to '新規登録', new_group_item_path(@group.id) , class:"check-item" %></li>
-        <li><%= link_to 'リストの確認・修正', group_items_path(@group.id), class:"check-item" %></li>
+        <li><%= link_to '在庫リスト', group_items_path(@group.id), class:"check-item" %></li>
+        <li><%= link_to 'お買い物リスト', group_orders_path(@group.id), class:"check-order" %></li>
       </ul>
-      <p>＜お買い物リスト＞</p><br>
-      <ul class="group__order">
-        <li><%= link_to '新規作成（在庫から選ぶ）', group_items_path(@group.id), class:"check-order" %></li>
-        <li><%= link_to '新規作成（それ以外）', "#", class:"check-order" %></li>
-        <li><%= link_to 'リストの確認・修正', group_orders_path(@group.id), class:"check-order" %></li>
-      </ul>
-      <p>＜グループ管理＞</p><br>
       <ul class="group__edit">
-        <li><%= link_to '編集', "#", class:"edit-group" %></li>
-        <li><%= link_to '削除', group_path(@group.id), data: { turbo_method: :delete }, class:"delete-group" %></li>
+        <li><%= link_to 'グループを編集する', "#", class:"edit-group" %></li>
+        <li><%= link_to '!!グループを削除する!!', group_path(@group.id), data: { turbo_method: :delete }, class:"delete-group" %></li>
       </ul>
     </div>
     
