--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,16 +1,17 @@
 お買い物リスト
 
-<%= link_to '続けて投稿する', group_items_path(@group.id) %>
+<%= link_to '在庫リストから登録', group_items_path(@group.id) %>
+<%= link_to '在庫にないものを登録', "#" %>
 <%= link_to 'グループTOPへ戻る', group_path(@group.id) %>
 
 <% @orders.each do |order| %>
   
   <ul>
   <ul><% if order.item.image.attached? %>
-      <li><%= image_tag order.item.image.variant(resize: '300x200'), class: 'item-images' %></li>
-      <li>お買い物メモ：<%= order.memo %></li>
       <li>優先度：<%= order.priority.name %></li>
       <li>カテゴリ：<%= order.category.name %></li>
+      <li>お買い物メモ：<%= order.memo %></li>
+      <li><%= image_tag order.item.image.variant(resize: '300x200'), class: 'item-images' %></li>
       <% else %>
       <li>お買い物メモ：<%= order.memo %></li>
       <li>優先度：<%= order.priority.name %></li>
