--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -26,4 +26,4 @@
 </div>
 
 <%= link_to 'グループTOPへ戻る', group_path(@group.id) %>
-<%= link_to 'リストの確認・修正', group_items_path(@group.id) %>
+<%= link_to '在庫リストに戻る', group_items_path(@group.id) %>
