--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,7 @@
 在庫を修正
 
 <div class="items-form">
-<%= form_with model: @item, url: group_item_path(@item.group.id), local: true do |f| %>
+<%= form_with model: @item, local: true do |f| %>
   <div>
   <%= f.label 'カテゴリーを選ぶ'%>
   </div>
@@ -16,7 +16,10 @@
   <%= f.file_field :image %>
   <div>
   <%= f.submit "修正" ,class:"add-items-btn" %>
-  <%= link_to '戻る',  group_item_path(id: @item.id) %>
   </div>
 <% end %>
 </div>
+
+<%= link_to '削除する', item_path(@item.id), data:{turbo_method: :delete} %>
+
+<%= link_to '戻る', group_items_path(@item.group.id) %>
