--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,19 +5,18 @@
 <%= link_to 'グループTOPへ戻る', group_path(@group.id) %>
 
 <% @orders.each do |order| %>
-  
   <ul>
-  <ul><% if order.item.image.attached? %>
+    <% if order.item.image.attached? %>
       <li>優先度：<%= order.priority.name %></li>
       <li>カテゴリ：<%= order.category.name %></li>
       <li>お買い物メモ：<%= order.memo %></li>
       <li><%= image_tag order.item.image.variant(resize: '300x200'), class: 'item-images' %></li>
-      <% else %>
+    <% else %>
       <li>お買い物メモ：<%= order.memo %></li>
       <li>優先度：<%= order.priority.name %></li>
       <li>カテゴリ：<%= order.category.name %></li>
-      <% end %>
+    <% end %>
   </ul>
-  <%= link_to '編集', edit_group_order_path(id: order.id) %>
-  <%= link_to '削除', group_order_path(id: order.id), data:{turbo_method: :delete} %>
+  <%= link_to '編集', edit_order_path(order.id) %>
+  <%= link_to '削除', order_path(order.id), data:{turbo_method: :delete} %>
 <% end %>
