--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,6 +11,8 @@
     <li>お買い物メモ：<%= order.memo %></li>
     <% if order.item.image.attached? %>
       <li><%= image_tag order.item.image.variant(resize: '300x200'), class: 'item-images' %></li>
+    <% else %>
+      <li><%= image_tag 'noimage.jpg', :size => '300x200' %></li>
     <% end %>
   </ul>
   <%= link_to '編集', edit_order_path(order.id) %>
