リンク表示の修正

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -7,7 +7,7 @@
         <div class="create-group__member-list">
         <% if @members.present? %>
           <div class="create-group__explain">
-            このメンバーとグループを作成
+            <p>このメンバーとグループを作成</p>
           </div>
           <% @members.each do |member| %>  
             <div class="create-group__member-name">
