--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,9 +10,9 @@
       <li>カテゴリ：<%= item.category.name %></li>
       <li>在庫メモ：<%= item.memo %></li>
     <% if item.image.attached? %>
-      <li><%= image_tag item.image.variant(resize: '300x200'), class: 'item-images' %></li>
+      <li><%= image_tag item.image.variant(resize: '266x200'), class: 'item-images' %></li>
     <% else %>
-      <li><%= image_tag 'noimage.jpg', :size => '300x200' %></li>
+      <li><%= image_tag 'noimage.jpg', :size => '266x200', class: 'item-images' %></li>
     <% end %>
     </ul>
     <%= link_to '編集する', edit_item_path(item.id) %>
