--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -25,5 +25,5 @@
 <% end %>
 </div>
 
-<%= link_to 'グループTOPへ戻る', group_path(@group.id) %>
-<%= link_to '在庫リストに戻る', group_items_path(@group.id) %>
+<%= link_to 'グループTOPへ', group_path(@group.id) %>
+<%= link_to '在庫リストを見る', group_items_path(@group.id) %>
