リンク先の修正

--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -23,5 +23,5 @@
 
   <%= f.submit "買い物リストに登録" %>
 
-  <%= link_to '戻る',  group_purchases_path(@group.id) %>
+  <%= link_to '戻る',  group_orders_path(@group.id) %>
 <% end %>
