コードをモデルに移した

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,5 +39,7 @@
 <% end %>
 
 <input name="group_id" value=<%= @group.id %> type=hidden>
+<div>
 <%= f.submit '買い物完了', class:"order-btn" %>
+</div>
 <% end %>
