--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,30 +14,27 @@
 
   <body>
     <header class="header">
-      <ul class="header__title-section">
-        <li><%= link_to 'Kauzoh', root_path, class:"header__title" %></li>
+      <div class="header__title">
+        <%= link_to 'Kauzoh', root_path, class:"header__title-text" %>
+      </div>
+      <ul class="header__nav">
         <% if user_signed_in? %>
-          <li><%= link_to current_user.nickname, '#', class:"header__user-name" %></li>
-        <% end %>
-      </ul>
-      <ul class="header__nav-section">
-        <% if user_signed_in? %>
-          <li><%= link_to 'グループを作成', search_users_path, class:"header__link"%></li>
-          <li><%= link_to '１人グループを作成', new_group_path, class:"header__link"%></li> 
-          <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class:"header__link" %></li>
+          <li><%= link_to current_user.nickname, '#', class:"header__nav-username" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class:"header__nav-link" %></li>
         <% else %>
-          <li><%= link_to 'ログイン', new_user_session_path, class:"header__link" %></li>
-          <li><%= link_to '新規登録', new_user_registration_path, class:"header__link" %></li>
+          <li><%= link_to '新規登録', new_user_registration_path, class:"header__nav-link" %></li>
+          <li><%= link_to 'ログイン', new_user_session_path, class:"header__nav-link" %></li>
         <% end %>
       </ul>
     </header>
 
     <%= yield %>
 
-    <footer>
-      <div class="footer">
-        ©️ 2023 Kauzoh
-      </div>
+    <footer class="footer">
+      ©️ 2023 Kauzoh
     </footer>
   </body>
 </html>
+
+<%# <li><%= link_to 'グループを作成', search_users_path, class:"header__link"%></li> %>
+          <%# <li><%= link_to '１人グループを作成', new_group_path, class:"header__link"%></li>  %>
