--- a/app/assets/stylesheets/groups/new.css
+++ b/app/assets/stylesheets/groups/new.css
@@ -1,4 +1,10 @@
-/* グループ作成（グループ名入力）ページ */
+/* グループ名入力画面 */
+.create-group__form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 .create-group__member-list{
   margin-bottom: 20px;
@@ -7,8 +13,8 @@
   padding: 20px;
 }
 
-.create-group__explain{
-  font-size: 20px;
+.create-group__text{
+  font-size: 18px;
   text-align: center;
 }
 
@@ -17,24 +23,39 @@
   font-size: 18px;
 }
 
-.create-group__input-name{
+.create-group__member-name li{
+  list-style: inside;
+}
+
+.create-group__input{
   margin-bottom: 20px;
   background-color: rgb(249, 223, 238);
   border-radius: 5px;
   padding: 10px 20px;
 }
 
-.create-group__input{
-  font-size: 20px;
+.create-group__field{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.create-group__form{
+.create-group__text{
+  font-size: 16px;
+}
+
+.create-group__input-name{
+  font-size: 16px;
+}
+
+.create-group__field{
   width: 100%;
   font-size: 15px;
   margin: 20px 0 10px;
 }
 
-.actions{
+.create-group__actions{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,6 +63,18 @@
 }
 
 .create-group__btn{
+  font-family: 'BIZ UDPGothic', sans-serif;
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+  background-color: skyblue;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: solid;
+  margin-bottom: 10px;
+}
+
+.create-group__return-btn{
   font-family: 'BIZ UDPGothic', sans-serif;
   text-decoration: none;
   color: black;
