--- a/app/assets/stylesheets/users/search.css
+++ b/app/assets/stylesheets/users/search.css
@@ -1,10 +1,14 @@
 /* ユーザー検索ページ */
-.search__user-section{
-  background-color: rgb(249, 223, 238);
-  border-radius: 5px;
+.search-user__title{
+  font-size: 20px;
+  font-family: 'BIZ UDPGothic', sans-serif;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-.search__user{
+.search-user__form{
+  background-color: rgb(249, 223, 238);
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,30 +16,27 @@
   padding: 20px;
 }
 
-.search__user-title{
-  font-size: 25px;
-  font-family: 'BIZ UDPGothic', sans-serif;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.search__user-explain{
-  font-size: 18px;
-}
-
-.search__user-form{
-  width: 100%;
+.search-user__field{
   font-size: 15px;
-  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
-.actions{
+.search-user__input{
+  width: 50%;
+  font-size: 15px;
+}
+
+.search-user__actions{
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.search__user-btn{
+.search-user__btn{
   height: 30px;
   font-family: 'BIZ UDPGothic', sans-serif;
   font-size: 15px;
