--- a/app/views/users/search_results.html.erb
+++ b/app/views/users/search_results.html.erb
@@ -1,32 +1,44 @@
-<div class="main__wrapper">
-  <div class="main__section">
-
-    <div class="search-results__section">  
-      <%= form_with model: @user, url: add_members_groups_path, method: :get, class: "search-results", local: true do |f| %>
-
-        <% if @users.present? %>
-          <div class="select-user">
-            <p>メンバーリストに加えるユーザーを選択</p>
-            <% @users.each do |user| %>
-              <div class="select-user-name">
-              <%= check_box_tag "group[user_ids][]", user.id %>
-              <%= label_tag "group[user_ids][]", user.nickname %>
-              <%= label_tag "group[user_ids][]", user.email %>
-              </div>
-            <% end %>
-          </div>
-          <div class="actions">
-          <%= f.submit "メンバーリストに追加", class:"search-results__btn" %>
-          </div>
-        <% else %>
-          <p class="no-user-message">該当するユーザーはいませんでした</p>
-        <% end %>
-        <div>
-          <%= link_to '戻る', search_users_path, class:"return-link" %>
-        </div>
-      <% end %>
-    </div>
-
+<div class="group-wrapper">
+  <div class="group-wrapper__side-bar">
+    <%= render partial: '/groups/lists' %>
   </div>
-  <%= render partial: '/groups/list' %>
+
+  <div class="group-wrapper__main">
+    <%= render partial: '/groups/create_group_link' %>
+    <div class="group-wrapper__main-body">
+      
+      <div class="search-results__form">  
+        <%= form_with model: @user, url: add_members_groups_path, method: :get, class: "search-results__index", local: true do |f| %>
+
+          <% if @users.present? %>
+            <div class="search-results__text">
+              <p>メンバーリストに加えるユーザーを選択</p>
+              <% @users.each do |user| %>
+                <div class="search-results__select-user">
+                  <%= check_box_tag "group[user_ids][]", user.id %>
+                  <%= label_tag "group[user_ids][]", user.nickname %>
+                  <%= label_tag "group[user_ids][]", user.email %>
+                </div>
+              <% end %>
+            </div>
+            <div class="search-results__actions">
+              <%= f.submit "メンバーリストに追加", class:"search-results__btn" %>
+            </div>
+          <% else %>
+            <p class="search-results__text">該当するユーザーはいませんでした</p>
+          <% end %>
+          <div>
+            <%= link_to '戻る', search_users_path, class:"search-results__return-btn" %>
+          </div>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
 </div>
+
+
+
+
+
+    
