--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -7,8 +7,8 @@
     <%= render partial: 'create_group_link' %>
     <div class="group-wrapper__main-body">
       
-      <div class="create-group__form">
-        <%= form_with model: @group, local: true do |f| %>
+      <%= form_with model: @group, local: true do |f| %>
+        <div class="create-group__form">
           
           <div class="create-group__member-list">
           <% if @members.present? %>
@@ -28,22 +28,20 @@
           <% end %>
           </div>
 
-          <div class="create-group__input">
-            <div class="create-group__field">
-              <%= f.label 'グループ名を入力してください', class:"create-group__text" %><br>
-              <%= f.text_field :name, autocomplete: "name", placeholder: 'グループ名', class:"create-group__input-name" %>
-              <input name="group[user_ids][]" value=<%= current_user.id %> type="hidden">
-            </div>
+          <div class="create-group__field">
+            <%= f.label 'グループ名を入力してください' %><br>
+            <%= f.text_field :name, autocomplete: "name", autofocus: true, placeholder: 'グループ名', class:"create-group__input" %>
+            <input name="group[user_ids][]" value=<%= current_user.id %> type="hidden">
 
             <div class="create-group__actions">
             <%= f.submit "グループを作成", class:"create-group__btn" %>
             </div>
-          </div>
 
-        <% end %>
-        <%= link_to 'ユーザー検索に戻る', search_users_path, class:"create-group__return-btn"  %>
-        
-      </div>
+          </div>
+          
+        </div>
+      <% end %>
+      <%= link_to 'ユーザー検索に戻る', search_users_path, class:"create-group__return-btn"  %>
 
     </div>
   </div>
