--- a/app/assets/stylesheets/groups/show.css
+++ b/app/assets/stylesheets/groups/show.css
@@ -1,38 +1,48 @@
 /* グループ詳細画面 */
-.group__detail{
-  padding: 10px 30px 20px;
+.group-wrapper__current-group{
   font-size: 18px;
-  background-color: rgb(249, 223, 238);
-  border-radius: 10px;
+  font-weight: bold;
+  text-decoration: none;
   color: darkslateblue;
 }
 
-.group__main-section-name{
+.group-detail{
+  padding: 10px 30px 20px;
+  font-size: 16px;
+  background-color: rgb(249, 223, 238);
+  border-radius: 10px;
   color: darkslateblue;
+  text-shadow: 1px 1px 1px white;
+}
+
+.group-detail__name{
   line-height: 30px;
   text-align: center;
   font-weight: bold;
   text-decoration: none;
   letter-spacing: 5px;
   background: linear-gradient(transparent 60%, #ddaf16 60%);
-  text-shadow: 1px 1px 1px white;
   margin-bottom: 20px;
 }
 
-.group__member{
+.group-detail__members{
   margin-bottom: 20px;
 }
 
-.group__order, .group__item, .group__edit{
+.group-detail__contents{
   margin-bottom: 20px;
   list-style: inside;
 }
 
-.group__order li, .group__item li, .group__edit li{
+.group-detail__edit{
+  list-style: inside;
+}
+
+.group-detail__contents li, .group-detail__edit li{
   margin-bottom: 5px;
 }
 
-.check-order, .check-item, .create-order, .add-item, .edit-group, .delete-group{
+.group-detail__link{
   text-decoration: none;
   color: darkslateblue;
 }
