--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,26 +1,32 @@
-<div class="main__wrapper">
-  <div class="main__section">
-
-    <div class="group__detail">
-      <div class="group__main-section-name">
-        グループ：<%= @group.name %>
-      </div>
-      <div class="group__member">
-        メンバー：
-        <% @users.each do |user| %>
-          <%= user.nickname %>
-        <% end %>
-      </div>
-      <ul class="group__item">
-        <li><%= link_to '在庫リスト', group_items_path(@group.id), class:"check-item" %></li>
-        <li><%= link_to 'お買い物リスト', group_orders_path(@group.id), class:"check-order" %></li>
-      </ul>
-      <ul class="group__edit">
-        <li><%= link_to 'グループを編集する', "#", class:"edit-group" %></li>
-        <li><%= link_to '!!グループを削除する!!', group_path(@group.id), data: { turbo_method: :delete }, class:"delete-group" %></li>
-      </ul>
-    </div>
-    
+<div class="group-wrapper">
+  <div class="group-wrapper__side-bar">
+    <%= render partial: 'lists' %>
   </div>
-  <%= render partial: 'list' %>
+
+  <div class="group-wrapper__main">
+    <%= render partial: 'current_group_name' %>
+    <div class="group-wrapper__main-body">
+      
+      <div class="group-detail">
+        <div class="group-detail__name">
+          グループ：<%= @group.name %>
+        </div>
+        <div class="group-detail__members">
+          メンバー：
+          <% @users.each do |user| %>
+            <%= user.nickname %>
+          <% end %>
+        </div>
+        <ul class="group-detail__contents">
+          <li><%= link_to '在庫リスト', group_items_path(@group.id), class:"group-detail__link" %></li>
+          <li><%= link_to 'お買い物リスト', group_orders_path(@group.id), class:"group-detail__link" %></li>
+        </ul>
+        <ul class="group-detail__edit">
+          <li><%= link_to 'グループを編集する', "#", class:"group-detail__link" %></li>
+          <li><%= link_to '!!グループを削除する!!', group_path(@group.id), data: { turbo_method: :delete }, class:"group-detail__link" %></li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
 </div>
