--- a/app/views/users/search_results.html.erb
+++ b/app/views/users/search_results.html.erb
@@ -7,9 +7,8 @@
     <%= render partial: '/groups/create_group_link' %>
     <div class="group-wrapper__main-body">
       
-      <div class="search-results__form">  
-        <%= form_with model: @user, url: add_members_groups_path, method: :get, class: "search-results__index", local: true do |f| %>
-
+      <%= form_with model: @user, url: add_members_groups_path, method: :get, local: true do |f| %>
+        <div class="search-results__form">  
           <% if @users.present? %>
             <div class="search-results__text">
               <p>メンバーリストに加えるユーザーを選択</p>
@@ -30,8 +29,8 @@
           <div>
             <%= link_to '戻る', search_users_path, class:"search-results__return-btn" %>
           </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
 
     </div>
   </div>
