--- a/app/views/groups/_current_group_name.html.erb
+++ b/app/views/groups/_current_group_name.html.erb
@@ -1,5 +1,5 @@
-<ul class="group-wrapper__main-head">
-  <li><%= link_to "現在のグループ：#{@group.name}", '#', class:"group-wrapper__current-group" %></li>
-  <li><%= link_to 'グループを作成', search_users_path, class:"group-wrapper__main-link" %></li>
-  <li><%= link_to '１人グループを作成', new_group_path, class:"group-wrapper__main-link" %></li>
+<ul class="wrapper__main-head">
+  <li><%= link_to "現在のグループ：#{@group.name}", '#', class:"wrapper__current-group" %></li>
+  <li><%= link_to 'グループを作成', search_users_path, class:"wrapper__main-link" %></li>
+  <li><%= link_to '１人グループを作成', new_group_path, class:"wrapper__main-link" %></li>
 </ul>
