--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -1,6 +1,38 @@
-.item-images{
-  height: 200px;
-  width: 266px;
+/* 在庫一覧 */
+.item__content{
+  width: calc(100% / 3 - 20px);
+  margin: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: rgb(249, 223, 238);
+}
+
+.item__category, .item__memo{
+  margin-bottom: 5px;
+}
+
+.item__image{
+  width: 100%;
+  height: 180px;
   object-fit: contain;
+  background-color: white;
   border: double black;
+  margin-bottom: 5px;
+}
+
+.item__buttons{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.item__btn{
+  font-family: 'BIZ UDPGothic', sans-serif;
+  text-decoration: none;
+  color: black;
+  font-size: 11px;
+  background-color: skyblue;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: solid;
 }
