--- a/app/views/groups/_lists.html.erb
+++ b/app/views/groups/_lists.html.erb
@@ -1,8 +1,8 @@
-<div class="group-wrapper__side-bar-title">
+<div class="wrapper__side-bar-title">
   グループリスト
 </div>
-<ul class="group-wrapper__side-bar-lists">
+<ul class="wrapper__side-bar-lists">
   <% current_user.groups.each do |group| %>
-    <li><%= link_to group.name, group_path(group.id), class:"group-wrapper__side-bar-name" %>
+    <li><%= link_to group.name, group_path(group.id), class:"wrapper__side-bar-name" %>
   <% end %>
 </ul>
