--- a/app/views/groups/add_members.html.erb
+++ b/app/views/groups/add_members.html.erb
@@ -1,11 +1,11 @@
-<div class="group-wrapper">
-  <div class="group-wrapper__side-bar">
+<div class="wrapper">
+  <div class="wrapper__side-bar">
     <%= render partial: 'lists' %>
   </div>
 
-  <div class="group-wrapper__main">
+  <div class="wrapper__main">
     <%= render partial: 'create_group_link' %>
-    <div class="group-wrapper__main-body">
+    <div class="wrapper__main-body">
       
       <div class="add-members__form">
         <p class="add-members__title">メンバーリスト</p>
