--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,11 +1,11 @@
-<div class="group-wrapper">
-  <div class="group-wrapper__side-bar">
+<div class="wrapper">
+  <div class="wrapper__side-bar">
     <%= render partial: 'lists' %>
   </div>
 
-  <div class="group-wrapper__main">
+  <div class="wrapper__main">
     <%= render partial: 'current_group_name' %>
-    <div class="group-wrapper__main-body">
+    <div class="wrapper__main-body">
       
       <div class="group-detail">
         <div class="group-detail__name">
