--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,11 +1,11 @@
-<div class="group-wrapper">
-  <div class="group-wrapper__side-bar">
+<div class="wrapper">
+  <div class="wrapper__side-bar">
     <%= render partial: '/groups/lists' %>
   </div>
 
-  <div class="group-wrapper__main">
+  <div class="wrapper__main">
     <%= render partial: '/groups/create_group_link' %>
-    <div class="group-wrapper__main-body">
+    <div class="wrapper__main-body">
       
       <div class="search-user__title">
         家族・友達を検索
