--- a/app/views/users/search_results.html.erb
+++ b/app/views/users/search_results.html.erb
@@ -1,11 +1,11 @@
-<div class="group-wrapper">
-  <div class="group-wrapper__side-bar">
+<div class="wrapper">
+  <div class="wrapper__side-bar">
     <%= render partial: '/groups/lists' %>
   </div>
 
-  <div class="group-wrapper__main">
+  <div class="wrapper__main">
     <%= render partial: '/groups/create_group_link' %>
-    <div class="group-wrapper__main-body">
+    <div class="wrapper__main-body">
       
       <%= form_with model: @user, url: add_members_groups_path, method: :get, local: true do |f| %>
         <div class="search-results__form">  
